<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_20"
    android:padding="15dp"
    android:background="@drawable/rectangle_white_cardview">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/contest_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flexDirection="row"
        app:justifyContent="flex_start"
        app:alignItems="center">
    <TextView
        android:id="@+id/tv_contest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cricket_contest"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/black"
        android:fontFamily="@font/p_b"/>

    <TextView
        android:id="@+id/tv_no_of_matches"
        android:layout_width="72dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/margin_15"
        android:background="@drawable/rectangle_light_blue"
        android:gravity="center"
        android:padding="7dp"
        android:text="5 Matches"
        android:textColor="#5276E1"
        android:textSize="@dimen/ts_10"
        android:fontFamily="@font/p_sb"/>
    </com.google.android.flexbox.FlexboxLayout>

    <ImageView
        android:id="@+id/iv_contest_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_30"
        android:src="@drawable/ic_cricket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contest_card_title" />

    <TextView
        android:id="@+id/tv_contest_description"
        android:layout_width="215dp"
        android:layout_height="37dp"
        android:layout_marginTop="@dimen/margin_30"
        android:lines="2"
        android:gravity="right"
        android:text="@string/we_created_teams_for_you_n_just_predict_and_win"
        android:textSize="@dimen/ts_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contest_card_title" />

    <TextView
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:background="@drawable/button_red"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/play_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_14"
        android:fontFamily="@font/p_sb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>