<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_20"
    android:background="@drawable/rectangle_white_cardview">

    <TextView
        android:id="@+id/series_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:paddingLeft="@dimen/margin_20"
        android:paddingRight="@dimen/margin_20"
        android:text="@string/series_name"
        android:textColor="@color/text_black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/team_img1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_15"
        android:src="@drawable/india"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series_name_text" />
    <ImageView
        android:id="@+id/team_img2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_15"
        android:src="@drawable/pakistan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series_name_text" />

    <LinearLayout
        android:id="@+id/match_text_blk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/series_name_text" >

        <TextView
            android:id="@+id/match_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/match_name"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/match_time"
            android:textColor="@color/color_time"
            android:textSize="12sp"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>