<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_15"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    android:background="@drawable/rectangle_white_cardview"
    android:padding="@dimen/margin_10">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_20"
        app:srcCompat="@drawable/ic_india_flag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/series_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/series_name"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:fontFamily="@font/p_sb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            </TextView>

            <TextView
                android:id="@+id/match_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:text="@string/match_name"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                android:fontFamily="@font/p_sb"
                app:layout_constraintTop_toBottomOf="@id/series_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            </TextView>

            <TextView
                android:id="@+id/match_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/match_time"
                android:textAlignment="center"
                android:textColor="@color/color_orange"
                android:textSize="12sp"
                android:fontFamily="@font/p_sb"
                app:layout_constraintTop_toBottomOf="@id/match_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            </TextView>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_20"
            app:srcCompat="@drawable/ic_pak_flag"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>