<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".views.SignupActivity">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_banner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_100"
                android:text="@string/sign_in"
                android:textSize="@dimen/text_size_25"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/banner" />

            <TextView
                android:id="@+id/tv_signp_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/sign_in_with"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup" />

            <ImageView
                android:id="@+id/iv_google_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:src="@drawable/ic_google"
                app:layout_constraintStart_toEndOf="@id/tv_signp_with"
                app:layout_constraintTop_toBottomOf="@id/tv_signup" />

            <ImageView
                android:id="@+id/iv_fb_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:src="@drawable/ic_facebook"
                app:layout_constraintStart_toEndOf="@id/iv_google_signin"
                app:layout_constraintTop_toBottomOf="@id/tv_signup" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:background="@drawable/shape_round"
                android:gravity="center"
                android:text="OR"
                android:textSize="@dimen/ts_12"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signp_with" />

            <LinearLayout
                android:id="@+id/ll_user_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:background="@drawable/edittext_states"
                    android:hint="@string/username"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/ts_14" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:background="@drawable/edittext_states"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/ts_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_15"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/ts_12" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_25"
                android:text="Not a Member?"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_25"
                android:text="Sign Up Now"
                android:textColor="@color/text_blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_already_have_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>